--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: timecardassistant
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Assists In The Creating Of Timecards
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Ben Woodard
+Maintainer: Ben Woodard <ben.woodard@searchdiscov>
+Description: Use this package to assist you in keeping track of your time.
+    Using this app in the daily R tasks will help you build your R skills while 
+    keeping track of your activity time and streamlining your daily timecard entries.
+License: What license should I include?
 Encoding: UTF-8
 LazyData: true
 Imports: 
