--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,5 +10,7 @@ Description: Use this package to assist you in keeping track of your time.
 License: What license should I include?
 Encoding: UTF-8
 LazyData: true
+Depends:
+  tidyverse (>= 1.3.0)
 Imports: 
   tidyverse (>= 1.3.0)
