--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,11 +7,11 @@ Maintainer: Ben Woodard <ben.woodard@searchdiscovery.com>
 Description: Use this package to assist you in keeping track of your time.
     Using this app in the daily R tasks will help you build your R skills while 
     keeping track of your activity time and streamlining your daily timecard entries.
-License: What license should I include?
+License: MIT
 Encoding: UTF-8
 LazyData: true
 Depends:
-  tidyverse (>= 1.3.0)
+  dplyr (>= 0.8.0)
 Imports: 
-  tidyverse (>= 1.3.0)
+  
 
