added timer functions to namespace via auto documentation and adjusted the version number based on the calendar integration improvement

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,10 +10,13 @@ export(calendar_list)
 export(calendar_oauth_app)
 export(calendar_token)
 export(calendar_user)
+export(donetimer)
+export(endday)
 export(get_gcal_events)
 export(get_gcal_list)
 export(get_google_token)
 export(request_generate)
+export(starttimer)
 import(dplyr)
 importFrom(dplyr,'%>%')
 importFrom(dplyr,bind_cols)
