ading tca_followup information to namespace documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(get_gcal_list)
 export(get_google_token)
 export(request_generate)
 export(starttimer)
+export(tca_followup)
 import(dplyr)
 importFrom(dplyr,'%>%')
 importFrom(dplyr,bind_cols)
