updating the documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ export(get_google_token)
 export(request_generate)
 export(starttimer)
 export(tca_followup)
+export(tca_summary)
+export(unfinished)
 import(dplyr)
 importFrom(dplyr,'%>%')
 importFrom(dplyr,bind_cols)
