added a new tca_summary feature that pulls in the first date for the current week and then spreads the data to look more like what you see in PSA

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(tca_followup)
 export(tca_summary)
 export(unfinished)
 import(dplyr)
+import(lubridate)
 importFrom(dplyr,'%>%')
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
