Increment version number

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,summarise_all)
+importFrom(janitor,adorn_totals)
 importFrom(lubridate,floor_date)
 importFrom(magrittr,"%>%")
 importFrom(tibble,add_row)
