--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: timecardassistant
 Type: Package
 Title: Assists In The Creating Of Timecards
-Version: 0.1.0
+Version: 0.1.1
 Author: Ben Woodard
 Maintainer: Ben Woodard <ben.woodard@searchdiscovery.com>
 Description: Use this package to assist you in keeping track of your time.
@@ -20,5 +20,6 @@ Imports:
      tibble,
      nlme,
      magrittr,
-     tidyr
+     tidyr,
+     janitor
 RoxygenNote: 7.1.1
