add across and replace 0 for na

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,17 +4,17 @@ export(donetimer)
 export(endday)
 export(starttimer)
 export(summary)
+importFrom(dplyr,across)
 importFrom(dplyr,arrange)
 importFrom(dplyr,filter)
-importFrom(dplyr,funs)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
-importFrom(dplyr,summarise_all)
 importFrom(janitor,adorn_totals)
 importFrom(lubridate,floor_date)
 importFrom(magrittr,"%>%")
-importFrom(tibble,add_row)
+importFrom(tidyr,everything)
+importFrom(tidyr,replace_na)
 importFrom(tidyr,spread)
 importFrom(utils,write.csv)
