--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,14 +12,12 @@ Encoding: UTF-8
 LazyData: true
 Imports:
      dplyr,
-     gargle, 
-     httr, 
      lubridate, 
      purrr, 
-     rlang, 
      tibble,
-     nlme,
      magrittr,
      tidyr,
-     janitor
+     janitor,
+     glue,
+     readr
 RoxygenNote: 7.1.1
