updating to include row id for easier edits

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ importFrom(janitor,adorn_totals)
 importFrom(lubridate,floor_date)
 importFrom(magrittr,"%>%")
 importFrom(readr,read_csv)
+importFrom(tibble,rowid_to_column)
 importFrom(tidyr,everything)
 importFrom(tidyr,replace_na)
 importFrom(tidyr,spread)
